src/test/parse-fail/trait-pub-assoc-ty.rs
trait Foo {
    pub type Foo;
    //~^ ERROR expected one of `async`, `const`, `extern`, `fn`, `type`, `unsafe`, or `}`, found
}

fn main() {}
